# orlets

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  orlets-mode.el  result.txt  smth.orlets  smth2.orlets  test.orlets  test.txt
cfg/: config.h.in
examples/: if.orlets  jmp_loop.orlets  math.orlets
src/: #file.h#  .#file.h  file.h  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp
